Extract the leaderboard and place services